# OS_Lab5

./: README.md
OS_Lab5_WinAPI/: OS_Lab5_WinAPI.sln
OS_Lab5_WinAPI/OS_Lab5_WinAPI/: CMakeLists.txt  Client.cpp  OS_Lab5_WinAPI.vcxproj  Server.cpp  UnitTests.cpp  employee.h
OS_Lab5_pipe/: OS_Lab5_pipe.sln
OS_Lab5_pipe/OS_Lab5_pipe/: CMakeLists.txt  Client.cpp  OS_Lab5_pipe.vcxproj  OS_Lab5_pipe.vcxproj.filters  Server.cpp  UnitTests.cpp  employee.h
